--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,12 @@ services:
       - "8080:8080"
     depends_on:
       - db
+      - redis
+
+  redis:
+    image: redis:6
+    ports:
+      - "6379:6379"
 
 volumes:
   db_data:
